--- a/src/app/layout/default-layout/default-footer/default-footer.component.html
+++ b/src/app/layout/default-layout/default-footer/default-footer.component.html
@@ -1,7 +1,7 @@
 <!--<c-footer>-->
   <div>
-    <a href="https://coreui.io/" target="_blank">CoreUI</a>
-    <span> &copy; 2024 creativeLabs</span>
+    <a href="#" target="_blank">Carent Admin</a>
+    <span> &copy; 2024 xCode</span>
   </div>
   <div class="ms-auto">
     Powered by
