--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -11,7 +11,7 @@
     >
       <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
-    <c-header-nav class="d-none d-md-flex">
+    <!-- <c-header-nav class="d-none d-md-flex">
       <c-nav-item>
         <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
       </c-nav-item>
@@ -21,17 +21,17 @@
       <c-nav-item>
         <a cNavLink routerLink="/settings" routerLinkActive="active">Settings</a>
       </c-nav-item>
-    </c-header-nav>
+    </c-header-nav> -->
 
     <c-header-nav class="d-none d-md-flex ms-auto ">
       <a cNavLink>
         <svg cIcon class="my-1" name="cilBell" size="lg"></svg>
       </a>
-      <a cNavLink>
+      <!-- <a cNavLink>
         <svg cIcon class="my-1" name="cilList" size="lg"></svg>
-      </a>
+      </a> -->
       <a cNavLink>
-        <svg cIcon class="my-1" name="cilEnvelopeOpen" size="lg"></svg>
+        <svg cIcon class="my-1" name="cilSettings" size="lg"></svg>
       </a>
     </c-header-nav>
 
@@ -69,7 +69,7 @@
       />
     </button>
     <ul cDropdownMenu class="pt-0 w-auto">
-      <li>
+      <!-- <li>
         <h6 cDropdownHeader class="bg-body-secondary text-body-secondary fw-semibold py-2 rounded-top">
           Account
         </h6>
@@ -103,7 +103,7 @@
           Comments
           <c-badge class="ms-auto" color="warning"> 42</c-badge>
         </a>
-      </li>
+      </li> -->
       <li>
         <h6 cDropdownHeader class="bg-body-secondary text-body-secondary fw-semibold py-2">
           Settings
@@ -117,6 +117,12 @@
         </a>
       </li>
       <li>
+        <a cDropdownItem routerLink="">
+          <svg cIcon class="me-2" name="cilAccountLogout"></svg>
+          Logout
+        </a>
+      </li>
+      <!-- <li>
         <a cDropdownItem routerLink="">
           <svg cIcon class="me-2" name="cilSettings"></svg>
           Settings
@@ -154,7 +160,7 @@
           <svg cIcon class="me-2" name="cilAccountLogout"></svg>
           Logout
         </a>
-      </li>
+      </li> -->
     </ul>
   </c-dropdown>
 </ng-template>
