--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -1,4 +1,5 @@
 <!--<c-header class="mb-4 d-print-none" position="sticky">-->
+<c-toaster id="c-toaster" class="p-3" position="fixed" [placement]="'top-end'" />
 <ng-container>
   <c-container [fluid]="true" class="border-bottom px-4">
     <button
