--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<c-toaster class="p-3" position="fixed" [placement]="'top-end'" />
 <div class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center">
   <c-container breakpoint="md">
     <c-row class="justify-content-center">
@@ -5,29 +6,43 @@
         <c-card-group>
           <c-card class="p-4">
             <c-card-body>
-              <form cForm>
+              <form cForm novalidate>
                 <h1>Login</h1>
                 <p class="text-body-secondary">Sign In to your account</p>
                 <c-input-group class="mb-3">
                   <span cInputGroupText>
-                    <svg cIcon name="cilUser"></svg>
+                    <svg [cIcon]="icons.cilUser"></svg>
                   </span>
-                  <input autoComplete="username" cFormControl placeholder="Username" />
+                  <input [(ngModel)]="loginRequest.username" name="username" autoComplete="username" cFormControl placeholder="Username" />
                 </c-input-group>
                 <c-input-group class="mb-4">
                   <span cInputGroupText>
-                    <svg cIcon name="cilLockLocked"></svg>
+                    <svg [cIcon]="icons.cilLockLocked"></svg>
                   </span>
                   <input
+                    [(ngModel)]="loginRequest.password"
+                    name="password"
                     autoComplete="current-password"
                     cFormControl
                     placeholder="Password"
                     type="password"
                   />
                 </c-input-group>
+                <c-input-group class="mb-4">
+                  <span cInputGroupText>
+                    <svg [cIcon]="icons.cilTouchApp"></svg>
+                  </span>
+                  <select [(ngModel)]="loginRequest.role" name="role" cSelect placeholder="Role">
+                    <option value="ADMIN">Admin</option>
+                    <option value="TENANT_MANAGER" selected>Tenant Manager</option>
+                    <option value="TENANT_ADMIN">Tenant Admin</option>
+                  </select>
+                  <c-form-feedback>Please provide a valid State.</c-form-feedback>
+                </c-input-group>
                 <c-row>
                   <c-col xs="6">
-                    <button cButton class="px-4" color="primary">
+                    <button cButton class="m-1" [disabled]="isLoginLoading" (click)="doLogin()">
+                      <c-spinner *ngIf="isLoginLoading" aria-hidden="true" size="sm" variant="grow"></c-spinner>
                       Login
                     </button>
                   </c-col>
