feat: dashboard widget

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<app-dashboard-widget [title]="'a'"></app-dashboard-widget>
-
+<app-dashboard-widget [title]="'a'" [isLoading]="isWidgetLoading" [reportData]="reportData"></app-dashboard-widget>
+<!-- <app-widgets-dropdown /> -->
 <c-row class="mt-4">
   <c-col xs>
     <c-card class="mb-4">
