--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
-<app-dashboard-widget [title]="'a'" [isLoading]="isWidgetLoading" [reportData]="reportData"></app-dashboard-widget>
-<!-- <app-widgets-dropdown /> -->
+<ng-container *ngIf="!isWidgetLoading; else spinner">
+  <app-dashboard-widget [title]="'a'" [reportData]="reportData"></app-dashboard-widget>
+</ng-container>
 <c-row class="mt-4">
   <c-col xs>
     <c-card class="mb-4">
@@ -75,3 +76,7 @@
     </c-card>
   </c-col>
 </c-row>
+
+<ng-template #spinner>
+  <app-x-spinner></app-x-spinner>
+</ng-template>
