--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,1 +1,100 @@
-<p>admin works!</p>
+<c-row class="mt-4">
+    <c-col xs>
+        <c-card class="mb-4">
+            <c-card-body>
+                <form cForm novalidate class="row g-3">
+                    <c-col [md]="3">
+                        <c-input-group>
+                            <span cInputGroupText>
+                                <svg [cIcon]="icons.cilUser"></svg>
+                            </span>
+                            <input [(ngModel)]="adminFilter.name" name="name" autoComplete="name" cFormControl placeholder="Name" />
+                        </c-input-group>
+                    </c-col>
+                    <c-col [md]="3">
+                        <c-input-group>
+                            <span cInputGroupText>
+                                <svg [cIcon]="icons.cilUser"></svg>
+                            </span>
+                            <input [(ngModel)]="adminFilter.username" name="username" autoComplete="username" cFormControl placeholder="Username" />
+                        </c-input-group>
+                    </c-col>
+                    <c-col [md]="3">
+                        <c-input-group>
+                            <span cInputGroupText>
+                                <svg [cIcon]="icons.cilAddressBook"></svg>
+                            </span>
+                            <input [(ngModel)]="adminFilter.mobile" name="mobile" autoComplete="mobile" cFormControl placeholder="Mobile" />
+                        </c-input-group>
+                    </c-col>
+                    
+                    <c-col [md]="12" class="text-end">
+                        <button cButton class="me-1" color="secondary" type="reset" (click)="resetFilter()">
+                            Reset
+                        </button>
+                        <button cButton color="primary" [disabled]="loadings.customer" (click)="doGetAdminList()">
+                            <c-spinner *ngIf="loadings.customer" aria-hidden="true" size="sm" variant="grow"></c-spinner>
+                            Filter
+                        </button>
+                    </c-col>
+                </form>
+            </c-card-body>
+        </c-card>
+    </c-col>
+</c-row>
+
+<ng-container *ngIf="!loadings.customer; else spinner">
+    <c-row class="mt-4">
+      <c-col xs>
+        <table
+          [hover]="true"
+          [responsive]="true"
+          [striped]="true"
+          align="middle"
+          cTable
+          class="mb-0 border"
+        >
+          <thead class="text-nowrap text-truncate">
+          <tr>
+            <th class="bg-body-tertiary text-center ">
+              <svg cIcon name="cilPeople"></svg>
+            </th>
+            <th class="bg-body-tertiary">Name</th>
+            <th class="bg-body-tertiary">Username</th>
+            <th class="bg-body-tertiary">Mobile</th>
+            <th class="bg-body-tertiary text-center">Total Order</th>
+            <th class="bg-body-tertiary text-center">Email</th>
+          </tr>
+          </thead>
+          <tbody>
+            @for (data of adminList; track data.username; let i = $index) {
+              <tr>
+                <td class="text-center">
+                  <c-avatar [size]="'md'" color="primary" textColor="white">{{ data.name }}</c-avatar>
+                </td>
+                <td>
+                    <div class="small text-body-secondary text-nowrap">{{ data.name }}</div>
+                </td>
+                <td>
+                    <div class="small text-body-secondary text-nowrap">{{ data.username }}</div>
+                </td>
+                <td>
+                    <div class="small text-body-secondary text-nowrap">{{ data.mobile }}</div>
+                </td>
+                <td class="text-center">
+                    <div class="small text-body-secondary text-nowrap">{{ data.email }}</div>
+                </td>
+                <td class="text-center">
+                  <div class="small text-body-secondary text-nowrap">{{ data.joinDate | date : 'MMMM dd, yyyy' }}</div>
+                </td>
+              </tr>
+            }
+          </tbody>
+        </table>
+      </c-col>
+    </c-row>
+</ng-container>
+
+<ng-template #spinner>
+    <app-x-spinner></app-x-spinner>
+</ng-template>
