hotfix: domain model

--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -62,8 +62,8 @@
             <th class="bg-body-tertiary">Name</th>
             <th class="bg-body-tertiary">Username</th>
             <th class="bg-body-tertiary">Mobile</th>
-            <th class="bg-body-tertiary text-center">Total Order</th>
             <th class="bg-body-tertiary text-center">Email</th>
+            <th class="bg-body-tertiary text-center">Join Date</th>
           </tr>
           </thead>
           <tbody>
