feat: vehicle page

--- a/src/app/views/listing/listing.component.html
+++ b/src/app/views/listing/listing.component.html
@@ -116,6 +116,7 @@
             <th class="bg-body-tertiary">Name</th>
             <th class="bg-body-tertiary">Price</th>
             <th class="bg-body-tertiary text-center">Transmission</th>
+            <th class="bg-body-tertiary text-center">Engine</th>
             <th class="bg-body-tertiary text-center">Seat</th>
             <th class="bg-body-tertiary text-center">Deliverable</th>
             <th class="bg-body-tertiary text-center">Brand</th>
@@ -136,6 +137,9 @@
                 </td>
                 <td class="text-center">
                     <div class="small text-body-secondary text-nowrap">{{ data.transmission }}</div>
+                </td>
+                <td class="text-center">
+                    <div class="small text-body-secondary text-nowrap">{{ data.engineType }}</div>
                 </td>
                 <td class="text-center">
                     <div class="small text-body-secondary text-nowrap">{{ data.seat }}</div>
